# OS_lab1

./: .gitignore  CMakeLists.txt  cd.c  ls.c  main.c
.github/workflows/: build.yml  lint.yml
include/: bin_search.h  cat.h  cd.h  commands.h  echo.h  ema_search_int.h  execute.h  generate_data.h  help.h  ls.h  pwd.c  pwd.h  start_bench.h  utils.h
src/: bin_search.c  cat.c  cd.c  echo.c  ema_search_int.c  execute.c  generate_data.c  help.c  ls.c  pwd.c  start_bench.c  utils.c
